# Refactorio

./: .gitignore  .refactor-bot.config.json  LICENSE  README.md  Refactorio.command  pyproject.toml  refactor-bot_spec.md
prompts/: critic.system.txt  patcher.system.txt  planner.system.txt  security.system.txt
refactor_bot/: __init__.py  backup.py  claude_driver.py  cli.py  config.py  context_pack.py  ledger.py  main.py  patch_apply.py  planner.py  repo_manager.py  report.py  security.py  util.py  verifier.py
refactor_bot/gui/: __init__.py  app.py  state.py  theme.py
refactor_bot/gui/components/: __init__.py  activity_indicator.py  batch_list.py  debug_console.py  diff_viewer.py  file_tree.py  log_viewer.py  progress_bar.py  risk_badge.py  sidebar.py  status_bar.py
refactor_bot/gui/dialogs/: __init__.py
refactor_bot/gui/views/: __init__.py  configuration.py  dashboard.py  history_view.py  plan_view.py  progress_view.py  repo_select.py  security_view.py  settings.py
refactor_bot/indexer/: __init__.py  deps.py  symbols.py
schemas/: critic.schema.json  patcher.schema.json  planner.schema.json  security.schema.json
